manifests/base/tests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-pod
  labels:
    app: test-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-pod
  template:
    metadata:
      labels:
        app: test-pod
    spec:
      containers:
        - name: nginx
          image: theadzik/static-cv:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: "TCP"
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
          volumeMounts:
            - mountPath: /tmp
              name: tmp
      securityContext:
        runAsUser: 10003
        runAsGroup: 20003
        fsGroup: 20003
      volumes:
        - name: tmp
          emptyDir: {}
