manifests/base/tests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-pod
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - test.zmuda.pro
      secretName: test-pod-tls
  rules:
    - host: test.zmuda.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-pod-http
                port:
                  number: 8080
